# StockSage-AI

./: README.md
backend/: .gitignore  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  test_db.py
backend/ml/: sentiment.py  smart_recommender.py  train_lstm.py  train_rf.py
backend/ml/models/: lstm_model.h5  lstm_scaler.npy  rf_model.pkl
backend/routes/: news.py  portfolio.py  stock.py  suggestion.py  user.py
backend/services/: alpha_vantage_service.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: GlassCard.jsx  Navbar.jsx  NewsSection.jsx  StockCard.jsx
frontend/src/pages/: Dashboard.jsx  Landing.jsx  Login.jsx  Portfolio.jsx  Register.jsx  SmartSuggestions.jsx
