[tool.poetry]
name = "stocksage-backend"
version = "0.1.0"
description = "Backend for StockSage AI"
authors = ["Saakshi Pandey"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
tensorflow = "2.13.0"
pymongo = "^4.6.0"
python-dotenv = "^1.0.1"
scikit-learn = "^1.3.0"
yfinance = "^0.2.33"
pandas = "^2.1.0"
requests = "^2.31.0"
newsapi-python = "^0.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
